cadastrar tarefa funcionando

--- a/MonitoraTarefa/src/app/criar-tarefa/criar-tarefa.component.html
+++ b/MonitoraTarefa/src/app/criar-tarefa/criar-tarefa.component.html
@@ -14,7 +14,7 @@
         <label for="exampleFormControlInput1" class="form-label">prioridade:</label>
         <select id="exampleFormControlInput1" class="form-select" aria-label="Default select example" formControlName="prioridade" required>
             <option selected></option>
-            <option value="baixa">baixa</option>
+            <option value="baixa">Baixa</option>
             <option value="media">Média</option>
             <option value="alta">Alta</option>
         </select>
@@ -33,5 +33,5 @@
        </div>   
        <button type="submit">salva</button>
    </form>
-
+   
 </div>
