--- a/MonitoraTarefa/src/app/listar-tarefas/listar-tarefas.component.html
+++ b/MonitoraTarefa/src/app/listar-tarefas/listar-tarefas.component.html
@@ -39,7 +39,7 @@
         </tr>
     </tbody>
   </table>
-  <a routerLink="criar-tarefa">cadastrar uma nova</a>
+  <a routerLink="/criar-tarefa">cadastrar uma nova</a>
   <div class="alert alert-danger" style="display: none;" role="alert">
     A simple danger alert—check it out!
   </div>
