--- a/MonitoraTarefa/src/app/criar-tarefa/criar-tarefa.component.html
+++ b/MonitoraTarefa/src/app/criar-tarefa/criar-tarefa.component.html
@@ -33,5 +33,5 @@
        </div>   
        <button type="submit">salva</button>
    </form>
-   
+   <a routerLink="/listar-tarefas">lista de tarefas</a>
 </div>
