--- a/MonitoraTarefa/src/app/header/header.component.html
+++ b/MonitoraTarefa/src/app/header/header.component.html
@@ -1,10 +1,10 @@
 <nav>
     <div class="Home">
-      <h1><a routerLink="">Home</a></h1>
+      <h1><a routerLink="">Inicio</a></h1>
     </div>
     <div class="login">
       <p *ngIf="peUser">Seja bem-vindo, {{peUser}}</p>
-      <a *ngIf="!peUser" routerLink="/login">Entrar</a>
+      <a *ngIf="!peUser" routerLink="">Entrar</a>
       <img *ngIf="img && peUser" [src]="img"/>
       <button *ngIf="peUser" (click)="logout()">Sair</button>
     </div>
